--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#0068E8</color>
+    <color name="colorPrimaryDark">#005DD5</color>
+    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorGrey">#E5E5E8</color>
+    <color name="darkerGrey">#B0B0B3</color>
+    <color name="transparent">#00000000</color>
 </resources>
